# xplane-trajectory

./: CMakeLists.txt  README.md  main.cpp  trajectory.cpp  trajectory.h  waypoint.h
src/: CMakeLists.txt  trajectory.h
